# mattermost-emoji-kit

./: .editorconfig  .gitignore  LICENSE  README.md  importer.py  pyproject.toml  setup.cfg  slackmojis-downloader.py
mattermost_emoji_kit/: importer.py  slackmojis_downloader.py
