[tool.poetry]
name = "mattermost-emoji-kit"
version = "0.1.0"
description = "Some simple scripts to import custom emojis in Mattermost"
authors = ["Daniel Kertesz <daniel@spatof.org>"]

[tool.poetry.dependencies]
python = "^3.6"
mattermostdriver = "^7.0.1"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
Click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
