[metadata]
name = mattermost-emoji-kit
version = 0.0.2
author = Daniel Kertesz
author_email = "daniel@spatof.org"
description = Mattermost emoji scripts
long_description = Some simple scripts to import custom emojis in Mattermost
keywords = mattermost, emoji

[options]
packages = mattermost_emoji_kit
install_requires =
    mattermostdriver == 7.3.2
    click == 8.0.3
    beautifulsoup4 == 4.10.0
    requests == 2.27.1

[options.entry_points]
console_scripts =
    mattermost-emoji-importer = mattermost_emoji_kit.importer:main
    slackmojis-downloader = mattermost_emoji_kit.slackmojis_downloader:main
